[package]
name = "xdelta3"
version = "0.1.0"
authors = ["ng8eke <ng8eke@163.com>"]
edition = "2018"
license = "Apache License 2.0"
description = "Rust binding for xdelta3"
repository = "https://github.com/ng8eke/rxd3"
exclude = [
    "xdelta3/xdelta3/py-compile"
]

[dependencies]
libc = "0.2.51"

[build-dependencies]
cc = "1.0"
rand = "0.6.5"
