[package]
name = "xdelta3"
version = "0.1.5"
authors = ["ng8eke <ng8eke@163.com>", "Khole Lu <kklu@me.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust binding for xdelta3"
keywords = ["xdelta", "patch", "vcdiff"]
repository = "https://github.com/ng8eke/rxd3"
exclude = [
    "xdelta3/xdelta3/py-compile"
]

[badges]
maintenance = { status = "experimental" }

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
rand = "0.6"
bindgen = "0.52"
